Compilador Base/Compilador 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    MULTILINE_COMMENT

Grammar

Rule 0     S' -> main
Rule 1     main -> MAIN LBRACE declarations statements RBRACE
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> empty
Rule 4     declaration -> INT var_list SEMICOLON
Rule 5     declaration -> FLOAT var_list SEMICOLON
Rule 6     declaration -> BOOL var_list SEMICOLON
Rule 7     var_list -> var_list COMMA IDENTIFIER
Rule 8     var_list -> IDENTIFIER
Rule 9     do_until_statement -> DO LBRACE statements RBRACE UNTIL LPAREN condition RPAREN SEMICOLON
Rule 10    statements -> statements statement
Rule 11    statements -> empty
Rule 12    statement -> assignment
Rule 13    statement -> if_statement
Rule 14    statement -> write_statement
Rule 15    statement -> do_statement
Rule 16    statement -> while_statement
Rule 17    statement -> do_until_statement
Rule 18    assignment -> IDENTIFIER ASSIGN expression SEMICOLON
Rule 19    if_statement -> IF LPAREN condition RPAREN THEN LBRACE statements RBRACE ELSE LBRACE statements RBRACE FI
Rule 20    if_statement -> IF LPAREN condition RPAREN THEN LBRACE statements RBRACE FI
Rule 21    write_statement -> WRITE expression SEMICOLON
Rule 22    write_statement -> WRITE STRING SEMICOLON
Rule 23    do_statement -> DO LBRACE statements RBRACE WHILE LPAREN condition RPAREN SEMICOLON
Rule 24    while_statement -> WHILE LPAREN condition RPAREN LBRACE statements RBRACE
Rule 25    expression -> expression PLUS term
Rule 26    expression -> expression MINUS term
Rule 27    expression -> term
Rule 28    term -> term TIMES factor
Rule 29    term -> term DIVIDE factor
Rule 30    term -> factor
Rule 31    factor -> LPAREN expression RPAREN
Rule 32    factor -> NUMBER
Rule 33    factor -> FLOAT_NUMBER
Rule 34    factor -> IDENTIFIER
Rule 35    factor -> BOOL_VALUE
Rule 36    condition -> expression EQUALS expression
Rule 37    condition -> expression NOTEQUALS expression
Rule 38    condition -> expression LESS expression
Rule 39    condition -> expression LESSEQUAL expression
Rule 40    condition -> expression GREATER expression
Rule 41    condition -> expression GREATEREQUAL expression
Rule 42    condition -> expression AND expression
Rule 43    condition -> expression OR expression
Rule 44    empty -> <empty>
Rule 45    expression -> expression PLUS empty
Rule 46    expression -> expression MINUS empty
Rule 47    expression -> STRING

Terminals, with rules where they appear

AND                  : 42
ASSIGN               : 18
BOOL                 : 6
BOOL_VALUE           : 35
COMMA                : 7
COMMENT              : 
DIVIDE               : 29
DO                   : 9 23
ELSE                 : 19
EQUALS               : 36
FI                   : 19 20
FLOAT                : 5
FLOAT_NUMBER         : 33
GREATER              : 40
GREATEREQUAL         : 41
IDENTIFIER           : 7 8 18 34
IF                   : 19 20
INT                  : 4
LBRACE               : 1 9 19 19 20 23 24
LESS                 : 38
LESSEQUAL            : 39
LPAREN               : 9 19 20 23 24 31
MAIN                 : 1
MINUS                : 26 46
MULTILINE_COMMENT    : 
NOTEQUALS            : 37
NUMBER               : 32
OR                   : 43
PLUS                 : 25 45
RBRACE               : 1 9 19 19 20 23 24
RPAREN               : 9 19 20 23 24 31
SEMICOLON            : 4 5 6 9 18 21 22 23
STRING               : 22 47
THEN                 : 19 20
TIMES                : 28
UNTIL                : 9
WHILE                : 23 24
WRITE                : 21 22
error                : 

Nonterminals, with rules where they appear

assignment           : 12
condition            : 9 19 20 23 24
declaration          : 2
declarations         : 1 2
do_statement         : 15
do_until_statement   : 17
empty                : 3 11 45 46
expression           : 18 21 25 26 31 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 45 46
factor               : 28 29 30
if_statement         : 13
main                 : 0
statement            : 10
statements           : 1 9 10 19 19 20 23 24
term                 : 25 26 27 28 29
var_list             : 4 5 6 7
while_statement      : 16
write_statement      : 14

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . MAIN LBRACE declarations statements RBRACE

    MAIN            shift and go to state 2

    main                           shift and go to state 1

state 1

    (0) S' -> main .



state 2

    (1) main -> MAIN . LBRACE declarations statements RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) main -> MAIN LBRACE . declarations statements RBRACE
    (2) declarations -> . declarations declaration
    (3) declarations -> . empty
    (44) empty -> .

    INT             reduce using rule 44 (empty -> .)
    FLOAT           reduce using rule 44 (empty -> .)
    BOOL            reduce using rule 44 (empty -> .)
    RBRACE          reduce using rule 44 (empty -> .)
    IDENTIFIER      reduce using rule 44 (empty -> .)
    IF              reduce using rule 44 (empty -> .)
    WRITE           reduce using rule 44 (empty -> .)
    DO              reduce using rule 44 (empty -> .)
    WHILE           reduce using rule 44 (empty -> .)

    declarations                   shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) main -> MAIN LBRACE declarations . statements RBRACE
    (2) declarations -> declarations . declaration
    (10) statements -> . statements statement
    (11) statements -> . empty
    (4) declaration -> . INT var_list SEMICOLON
    (5) declaration -> . FLOAT var_list SEMICOLON
    (6) declaration -> . BOOL var_list SEMICOLON
    (44) empty -> .

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    BOOL            shift and go to state 11
    RBRACE          reduce using rule 44 (empty -> .)
    IDENTIFIER      reduce using rule 44 (empty -> .)
    IF              reduce using rule 44 (empty -> .)
    WRITE           reduce using rule 44 (empty -> .)
    DO              reduce using rule 44 (empty -> .)
    WHILE           reduce using rule 44 (empty -> .)

    statements                     shift and go to state 6
    declaration                    shift and go to state 7
    empty                          shift and go to state 8

state 5

    (3) declarations -> empty .

    INT             reduce using rule 3 (declarations -> empty .)
    FLOAT           reduce using rule 3 (declarations -> empty .)
    BOOL            reduce using rule 3 (declarations -> empty .)
    RBRACE          reduce using rule 3 (declarations -> empty .)
    IDENTIFIER      reduce using rule 3 (declarations -> empty .)
    IF              reduce using rule 3 (declarations -> empty .)
    WRITE           reduce using rule 3 (declarations -> empty .)
    DO              reduce using rule 3 (declarations -> empty .)
    WHILE           reduce using rule 3 (declarations -> empty .)


state 6

    (1) main -> MAIN LBRACE declarations statements . RBRACE
    (10) statements -> statements . statement
    (12) statement -> . assignment
    (13) statement -> . if_statement
    (14) statement -> . write_statement
    (15) statement -> . do_statement
    (16) statement -> . while_statement
    (17) statement -> . do_until_statement
    (18) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (19) if_statement -> . IF LPAREN condition RPAREN THEN LBRACE statements RBRACE ELSE LBRACE statements RBRACE FI
    (20) if_statement -> . IF LPAREN condition RPAREN THEN LBRACE statements RBRACE FI
    (21) write_statement -> . WRITE expression SEMICOLON
    (22) write_statement -> . WRITE STRING SEMICOLON
    (23) do_statement -> . DO LBRACE statements RBRACE WHILE LPAREN condition RPAREN SEMICOLON
    (24) while_statement -> . WHILE LPAREN condition RPAREN LBRACE statements RBRACE
    (9) do_until_statement -> . DO LBRACE statements RBRACE UNTIL LPAREN condition RPAREN SEMICOLON

    RBRACE          shift and go to state 12
    IDENTIFIER      shift and go to state 20
    IF              shift and go to state 21
    WRITE           shift and go to state 22
    DO              shift and go to state 23
    WHILE           shift and go to state 24

    statement                      shift and go to state 13
    assignment                     shift and go to state 14
    if_statement                   shift and go to state 15
    write_statement                shift and go to state 16
    do_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    do_until_statement             shift and go to state 19

state 7

    (2) declarations -> declarations declaration .

    INT             reduce using rule 2 (declarations -> declarations declaration .)
    FLOAT           reduce using rule 2 (declarations -> declarations declaration .)
    BOOL            reduce using rule 2 (declarations -> declarations declaration .)
    RBRACE          reduce using rule 2 (declarations -> declarations declaration .)
    IDENTIFIER      reduce using rule 2 (declarations -> declarations declaration .)
    IF              reduce using rule 2 (declarations -> declarations declaration .)
    WRITE           reduce using rule 2 (declarations -> declarations declaration .)
    DO              reduce using rule 2 (declarations -> declarations declaration .)
    WHILE           reduce using rule 2 (declarations -> declarations declaration .)


state 8

    (11) statements -> empty .

    RBRACE          reduce using rule 11 (statements -> empty .)
    IDENTIFIER      reduce using rule 11 (statements -> empty .)
    IF              reduce using rule 11 (statements -> empty .)
    WRITE           reduce using rule 11 (statements -> empty .)
    DO              reduce using rule 11 (statements -> empty .)
    WHILE           reduce using rule 11 (statements -> empty .)


state 9

    (4) declaration -> INT . var_list SEMICOLON
    (7) var_list -> . var_list COMMA IDENTIFIER
    (8) var_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 26

    var_list                       shift and go to state 25

state 10

    (5) declaration -> FLOAT . var_list SEMICOLON
    (7) var_list -> . var_list COMMA IDENTIFIER
    (8) var_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 26

    var_list                       shift and go to state 27

state 11

    (6) declaration -> BOOL . var_list SEMICOLON
    (7) var_list -> . var_list COMMA IDENTIFIER
    (8) var_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 26

    var_list                       shift and go to state 28

state 12

    (1) main -> MAIN LBRACE declarations statements RBRACE .

    $end            reduce using rule 1 (main -> MAIN LBRACE declarations statements RBRACE .)


state 13

    (10) statements -> statements statement .

    RBRACE          reduce using rule 10 (statements -> statements statement .)
    IDENTIFIER      reduce using rule 10 (statements -> statements statement .)
    IF              reduce using rule 10 (statements -> statements statement .)
    WRITE           reduce using rule 10 (statements -> statements statement .)
    DO              reduce using rule 10 (statements -> statements statement .)
    WHILE           reduce using rule 10 (statements -> statements statement .)


state 14

    (12) statement -> assignment .

    RBRACE          reduce using rule 12 (statement -> assignment .)
    IDENTIFIER      reduce using rule 12 (statement -> assignment .)
    IF              reduce using rule 12 (statement -> assignment .)
    WRITE           reduce using rule 12 (statement -> assignment .)
    DO              reduce using rule 12 (statement -> assignment .)
    WHILE           reduce using rule 12 (statement -> assignment .)


state 15

    (13) statement -> if_statement .

    RBRACE          reduce using rule 13 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 13 (statement -> if_statement .)
    IF              reduce using rule 13 (statement -> if_statement .)
    WRITE           reduce using rule 13 (statement -> if_statement .)
    DO              reduce using rule 13 (statement -> if_statement .)
    WHILE           reduce using rule 13 (statement -> if_statement .)


state 16

    (14) statement -> write_statement .

    RBRACE          reduce using rule 14 (statement -> write_statement .)
    IDENTIFIER      reduce using rule 14 (statement -> write_statement .)
    IF              reduce using rule 14 (statement -> write_statement .)
    WRITE           reduce using rule 14 (statement -> write_statement .)
    DO              reduce using rule 14 (statement -> write_statement .)
    WHILE           reduce using rule 14 (statement -> write_statement .)


state 17

    (15) statement -> do_statement .

    RBRACE          reduce using rule 15 (statement -> do_statement .)
    IDENTIFIER      reduce using rule 15 (statement -> do_statement .)
    IF              reduce using rule 15 (statement -> do_statement .)
    WRITE           reduce using rule 15 (statement -> do_statement .)
    DO              reduce using rule 15 (statement -> do_statement .)
    WHILE           reduce using rule 15 (statement -> do_statement .)


state 18

    (16) statement -> while_statement .

    RBRACE          reduce using rule 16 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 16 (statement -> while_statement .)
    IF              reduce using rule 16 (statement -> while_statement .)
    WRITE           reduce using rule 16 (statement -> while_statement .)
    DO              reduce using rule 16 (statement -> while_statement .)
    WHILE           reduce using rule 16 (statement -> while_statement .)


state 19

    (17) statement -> do_until_statement .

    RBRACE          reduce using rule 17 (statement -> do_until_statement .)
    IDENTIFIER      reduce using rule 17 (statement -> do_until_statement .)
    IF              reduce using rule 17 (statement -> do_until_statement .)
    WRITE           reduce using rule 17 (statement -> do_until_statement .)
    DO              reduce using rule 17 (statement -> do_until_statement .)
    WHILE           reduce using rule 17 (statement -> do_until_statement .)


state 20

    (18) assignment -> IDENTIFIER . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 29


state 21

    (19) if_statement -> IF . LPAREN condition RPAREN THEN LBRACE statements RBRACE ELSE LBRACE statements RBRACE FI
    (20) if_statement -> IF . LPAREN condition RPAREN THEN LBRACE statements RBRACE FI

    LPAREN          shift and go to state 30


state 22

    (21) write_statement -> WRITE . expression SEMICOLON
    (22) write_statement -> WRITE . STRING SEMICOLON
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . term
    (45) expression -> . expression PLUS empty
    (46) expression -> . expression MINUS empty
    (47) expression -> . STRING
    (28) term -> . term TIMES factor
    (29) term -> . term DIVIDE factor
    (30) term -> . factor
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . FLOAT_NUMBER
    (34) factor -> . IDENTIFIER
    (35) factor -> . BOOL_VALUE

    STRING          shift and go to state 32
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    FLOAT_NUMBER    shift and go to state 37
    IDENTIFIER      shift and go to state 38
    BOOL_VALUE      shift and go to state 39

    expression                     shift and go to state 31
    term                           shift and go to state 33
    factor                         shift and go to state 34

state 23

    (23) do_statement -> DO . LBRACE statements RBRACE WHILE LPAREN condition RPAREN SEMICOLON
    (9) do_until_statement -> DO . LBRACE statements RBRACE UNTIL LPAREN condition RPAREN SEMICOLON

    LBRACE          shift and go to state 40


state 24

    (24) while_statement -> WHILE . LPAREN condition RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 41


state 25

    (4) declaration -> INT var_list . SEMICOLON
    (7) var_list -> var_list . COMMA IDENTIFIER

    SEMICOLON       shift and go to state 42
    COMMA           shift and go to state 43


state 26

    (8) var_list -> IDENTIFIER .

    SEMICOLON       reduce using rule 8 (var_list -> IDENTIFIER .)
    COMMA           reduce using rule 8 (var_list -> IDENTIFIER .)


state 27

    (5) declaration -> FLOAT var_list . SEMICOLON
    (7) var_list -> var_list . COMMA IDENTIFIER

    SEMICOLON       shift and go to state 44
    COMMA           shift and go to state 43


state 28

    (6) declaration -> BOOL var_list . SEMICOLON
    (7) var_list -> var_list . COMMA IDENTIFIER

    SEMICOLON       shift and go to state 45
    COMMA           shift and go to state 43


state 29

    (18) assignment -> IDENTIFIER ASSIGN . expression SEMICOLON
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . term
    (45) expression -> . expression PLUS empty
    (46) expression -> . expression MINUS empty
    (47) expression -> . STRING
    (28) term -> . term TIMES factor
    (29) term -> . term DIVIDE factor
    (30) term -> . factor
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . FLOAT_NUMBER
    (34) factor -> . IDENTIFIER
    (35) factor -> . BOOL_VALUE

    STRING          shift and go to state 47
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    FLOAT_NUMBER    shift and go to state 37
    IDENTIFIER      shift and go to state 38
    BOOL_VALUE      shift and go to state 39

    expression                     shift and go to state 46
    term                           shift and go to state 33
    factor                         shift and go to state 34

state 30

    (19) if_statement -> IF LPAREN . condition RPAREN THEN LBRACE statements RBRACE ELSE LBRACE statements RBRACE FI
    (20) if_statement -> IF LPAREN . condition RPAREN THEN LBRACE statements RBRACE FI
    (36) condition -> . expression EQUALS expression
    (37) condition -> . expression NOTEQUALS expression
    (38) condition -> . expression LESS expression
    (39) condition -> . expression LESSEQUAL expression
    (40) condition -> . expression GREATER expression
    (41) condition -> . expression GREATEREQUAL expression
    (42) condition -> . expression AND expression
    (43) condition -> . expression OR expression
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . term
    (45) expression -> . expression PLUS empty
    (46) expression -> . expression MINUS empty
    (47) expression -> . STRING
    (28) term -> . term TIMES factor
    (29) term -> . term DIVIDE factor
    (30) term -> . factor
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . FLOAT_NUMBER
    (34) factor -> . IDENTIFIER
    (35) factor -> . BOOL_VALUE

    STRING          shift and go to state 47
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    FLOAT_NUMBER    shift and go to state 37
    IDENTIFIER      shift and go to state 38
    BOOL_VALUE      shift and go to state 39

    condition                      shift and go to state 48
    expression                     shift and go to state 49
    term                           shift and go to state 33
    factor                         shift and go to state 34

state 31

    (21) write_statement -> WRITE expression . SEMICOLON
    (25) expression -> expression . PLUS term
    (26) expression -> expression . MINUS term
    (45) expression -> expression . PLUS empty
    (46) expression -> expression . MINUS empty

    SEMICOLON       shift and go to state 50
    PLUS            shift and go to state 51
    MINUS           shift and go to state 52


state 32

    (22) write_statement -> WRITE STRING . SEMICOLON
    (47) expression -> STRING .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 53
    PLUS            reduce using rule 47 (expression -> STRING .)
    MINUS           reduce using rule 47 (expression -> STRING .)

  ! SEMICOLON       [ reduce using rule 47 (expression -> STRING .) ]


state 33

    (27) expression -> term .
    (28) term -> term . TIMES factor
    (29) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 27 (expression -> term .)
    PLUS            reduce using rule 27 (expression -> term .)
    MINUS           reduce using rule 27 (expression -> term .)
    EQUALS          reduce using rule 27 (expression -> term .)
    NOTEQUALS       reduce using rule 27 (expression -> term .)
    LESS            reduce using rule 27 (expression -> term .)
    LESSEQUAL       reduce using rule 27 (expression -> term .)
    GREATER         reduce using rule 27 (expression -> term .)
    GREATEREQUAL    reduce using rule 27 (expression -> term .)
    AND             reduce using rule 27 (expression -> term .)
    OR              reduce using rule 27 (expression -> term .)
    RPAREN          reduce using rule 27 (expression -> term .)
    TIMES           shift and go to state 54
    DIVIDE          shift and go to state 55


state 34

    (30) term -> factor .

    TIMES           reduce using rule 30 (term -> factor .)
    DIVIDE          reduce using rule 30 (term -> factor .)
    SEMICOLON       reduce using rule 30 (term -> factor .)
    PLUS            reduce using rule 30 (term -> factor .)
    MINUS           reduce using rule 30 (term -> factor .)
    EQUALS          reduce using rule 30 (term -> factor .)
    NOTEQUALS       reduce using rule 30 (term -> factor .)
    LESS            reduce using rule 30 (term -> factor .)
    LESSEQUAL       reduce using rule 30 (term -> factor .)
    GREATER         reduce using rule 30 (term -> factor .)
    GREATEREQUAL    reduce using rule 30 (term -> factor .)
    AND             reduce using rule 30 (term -> factor .)
    OR              reduce using rule 30 (term -> factor .)
    RPAREN          reduce using rule 30 (term -> factor .)


state 35

    (31) factor -> LPAREN . expression RPAREN
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . term
    (45) expression -> . expression PLUS empty
    (46) expression -> . expression MINUS empty
    (47) expression -> . STRING
    (28) term -> . term TIMES factor
    (29) term -> . term DIVIDE factor
    (30) term -> . factor
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . FLOAT_NUMBER
    (34) factor -> . IDENTIFIER
    (35) factor -> . BOOL_VALUE

    STRING          shift and go to state 47
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    FLOAT_NUMBER    shift and go to state 37
    IDENTIFIER      shift and go to state 38
    BOOL_VALUE      shift and go to state 39

    expression                     shift and go to state 56
    term                           shift and go to state 33
    factor                         shift and go to state 34

state 36

    (32) factor -> NUMBER .

    TIMES           reduce using rule 32 (factor -> NUMBER .)
    DIVIDE          reduce using rule 32 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 32 (factor -> NUMBER .)
    PLUS            reduce using rule 32 (factor -> NUMBER .)
    MINUS           reduce using rule 32 (factor -> NUMBER .)
    EQUALS          reduce using rule 32 (factor -> NUMBER .)
    NOTEQUALS       reduce using rule 32 (factor -> NUMBER .)
    LESS            reduce using rule 32 (factor -> NUMBER .)
    LESSEQUAL       reduce using rule 32 (factor -> NUMBER .)
    GREATER         reduce using rule 32 (factor -> NUMBER .)
    GREATEREQUAL    reduce using rule 32 (factor -> NUMBER .)
    AND             reduce using rule 32 (factor -> NUMBER .)
    OR              reduce using rule 32 (factor -> NUMBER .)
    RPAREN          reduce using rule 32 (factor -> NUMBER .)


state 37

    (33) factor -> FLOAT_NUMBER .

    TIMES           reduce using rule 33 (factor -> FLOAT_NUMBER .)
    DIVIDE          reduce using rule 33 (factor -> FLOAT_NUMBER .)
    SEMICOLON       reduce using rule 33 (factor -> FLOAT_NUMBER .)
    PLUS            reduce using rule 33 (factor -> FLOAT_NUMBER .)
    MINUS           reduce using rule 33 (factor -> FLOAT_NUMBER .)
    EQUALS          reduce using rule 33 (factor -> FLOAT_NUMBER .)
    NOTEQUALS       reduce using rule 33 (factor -> FLOAT_NUMBER .)
    LESS            reduce using rule 33 (factor -> FLOAT_NUMBER .)
    LESSEQUAL       reduce using rule 33 (factor -> FLOAT_NUMBER .)
    GREATER         reduce using rule 33 (factor -> FLOAT_NUMBER .)
    GREATEREQUAL    reduce using rule 33 (factor -> FLOAT_NUMBER .)
    AND             reduce using rule 33 (factor -> FLOAT_NUMBER .)
    OR              reduce using rule 33 (factor -> FLOAT_NUMBER .)
    RPAREN          reduce using rule 33 (factor -> FLOAT_NUMBER .)


state 38

    (34) factor -> IDENTIFIER .

    TIMES           reduce using rule 34 (factor -> IDENTIFIER .)
    DIVIDE          reduce using rule 34 (factor -> IDENTIFIER .)
    SEMICOLON       reduce using rule 34 (factor -> IDENTIFIER .)
    PLUS            reduce using rule 34 (factor -> IDENTIFIER .)
    MINUS           reduce using rule 34 (factor -> IDENTIFIER .)
    EQUALS          reduce using rule 34 (factor -> IDENTIFIER .)
    NOTEQUALS       reduce using rule 34 (factor -> IDENTIFIER .)
    LESS            reduce using rule 34 (factor -> IDENTIFIER .)
    LESSEQUAL       reduce using rule 34 (factor -> IDENTIFIER .)
    GREATER         reduce using rule 34 (factor -> IDENTIFIER .)
    GREATEREQUAL    reduce using rule 34 (factor -> IDENTIFIER .)
    AND             reduce using rule 34 (factor -> IDENTIFIER .)
    OR              reduce using rule 34 (factor -> IDENTIFIER .)
    RPAREN          reduce using rule 34 (factor -> IDENTIFIER .)


state 39

    (35) factor -> BOOL_VALUE .

    TIMES           reduce using rule 35 (factor -> BOOL_VALUE .)
    DIVIDE          reduce using rule 35 (factor -> BOOL_VALUE .)
    SEMICOLON       reduce using rule 35 (factor -> BOOL_VALUE .)
    PLUS            reduce using rule 35 (factor -> BOOL_VALUE .)
    MINUS           reduce using rule 35 (factor -> BOOL_VALUE .)
    EQUALS          reduce using rule 35 (factor -> BOOL_VALUE .)
    NOTEQUALS       reduce using rule 35 (factor -> BOOL_VALUE .)
    LESS            reduce using rule 35 (factor -> BOOL_VALUE .)
    LESSEQUAL       reduce using rule 35 (factor -> BOOL_VALUE .)
    GREATER         reduce using rule 35 (factor -> BOOL_VALUE .)
    GREATEREQUAL    reduce using rule 35 (factor -> BOOL_VALUE .)
    AND             reduce using rule 35 (factor -> BOOL_VALUE .)
    OR              reduce using rule 35 (factor -> BOOL_VALUE .)
    RPAREN          reduce using rule 35 (factor -> BOOL_VALUE .)


state 40

    (23) do_statement -> DO LBRACE . statements RBRACE WHILE LPAREN condition RPAREN SEMICOLON
    (9) do_until_statement -> DO LBRACE . statements RBRACE UNTIL LPAREN condition RPAREN SEMICOLON
    (10) statements -> . statements statement
    (11) statements -> . empty
    (44) empty -> .

    RBRACE          reduce using rule 44 (empty -> .)
    IDENTIFIER      reduce using rule 44 (empty -> .)
    IF              reduce using rule 44 (empty -> .)
    WRITE           reduce using rule 44 (empty -> .)
    DO              reduce using rule 44 (empty -> .)
    WHILE           reduce using rule 44 (empty -> .)

    statements                     shift and go to state 57
    empty                          shift and go to state 8

state 41

    (24) while_statement -> WHILE LPAREN . condition RPAREN LBRACE statements RBRACE
    (36) condition -> . expression EQUALS expression
    (37) condition -> . expression NOTEQUALS expression
    (38) condition -> . expression LESS expression
    (39) condition -> . expression LESSEQUAL expression
    (40) condition -> . expression GREATER expression
    (41) condition -> . expression GREATEREQUAL expression
    (42) condition -> . expression AND expression
    (43) condition -> . expression OR expression
    (25) expression -> . expression PLUS term
    (26) expression -> . expression MINUS term
    (27) expression -> . term
    (45) expression -> . expression PLUS empty
    (46) expression -> . expression MINUS empty
    (47) expression -> . STRING
    (28) term -> . term TIMES factor
    (29) term -> . term DIVIDE factor
    (30) term -> . factor
    (31) factor -> . LPAREN expression RPAREN
    (32) factor -> . NUMBER
    (33) factor -> . FLOAT_NUMBER
    (34) factor -> . IDENTIFIER
    (35) factor -> . BOOL_VALUE

    STRING          shift and go to state 47
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 36
    FLOAT_NUMBER    shift and go to state 37
    IDENTIFIER      shift and go to state 38
    BOOL_VALUE      shift and go to state 39

    condition                      shift and go to state 58
    expression                     shift and go to state 49
    term                           shift and go to state 33
    factor                         shift and go to state 34

state 42

    (4) declaration -> INT var_list SEMICOLON .

    INT             reduce using rule 4 (declaration -> INT var_list SEMICOLON .)
    FLOAT           reduce using rule 4 (declaration -> INT var_list SEMICOLON .)
    BOOL            reduce using rule 4 (declaration -> INT var_list SEMICOLON .)
    RBRACE          reduce using rule 4 (declaration -> INT var_list SEMICOLON .)
    IDENTIFIER      reduce using rule 4 (declaration -> INT var_list SEMICOLON .)
    IF              reduce using rule 4 (declaration -> INT var_list SEMICOLON .)
    WRITE           reduce using rule 4 (declaration -> INT var_list SEMICOLON .)
    DO              reduce using rule 4 (declaration -> INT var_list SEMICOLON .)
    WHILE           reduce using rule 4 (declaration -> INT var_list SEMICOLON .)


state 43

    (7) var_list -> var_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 59


state 44

    (5) declaration -> FLOAT var_list SEMICOLON .

    INT             reduce using rule 5 (declaration -> FLOAT var_list SEMICOLON .)
    FLOAT           reduce using rule 5 (declaration -> FLOAT var_list SEMICOLON .)
    BOOL            reduce using rule 5 (declaration -> FLOAT var_list SEMICOLON .)
    RBRACE          reduce using rule 5 (declaration -> FLOAT var_list SEMICOLON .)
    IDENTIFIER      reduce using rule 5 (declaration -> FLOAT var_list SEMICOLON .)
    IF              reduce using rule 5 (declaration -> FLOAT var_list SEMICOLON .)
    WRITE           reduce using rule 5 (declaration -> FLOAT var_list SEMICOLON .)
    DO              reduce using rule 5 (declaration -> FLOAT var_list SEMICOLON .)
    WHILE           reduce using rule 5 (declaration -> FLOAT var_list SEMICOLON .)


state 45

    (6) declaration -> BOOL var_list SEMICOLON .

    INT             reduce using rule 6 (declaration -> BOOL var_list SEMICOLON .)
    FLOAT           reduce using rule 6 (declaration -> BOOL var_list SEMICOLON .)
    BOOL            reduce using rule 6 (declaration -> BOOL var_list SEMICOLON .)
    RBRACE          reduce using rule 6 (declaration -> BOOL var_list SEMICOLON .)
    IDENTIFIER      reduce using rule 6 (declaration -> BOOL var_list SEMICOLON .)
    IF              reduce using rule 6 (declaration -> BOOL var_list SEMICOLON .)
    WRITE           reduce using rule 6 (declaration -> BOOL var_list SEMICOLON .)
    DO              reduce using rule 6 (declaration -> BOOL var_list SEMICOLON .)
    WHILE           reduce using rule 6 (declaration -> BOOL var_list SEMICOLON .)


state 46

    (18) assignment -> IDENTIFIER ASSIGN expression . SEMICOLON
    (25) expression -> expression . PLUS term
    (26) expression -> expression . MINUS term
    (45) expression -> expression . PLUS empty
    (46) expression -> expression . MINUS empty

    SEMICOLON       shift and go to state 60
    PLUS            shift and go to state 51
    MINUS           shift and go to state 52


state 47

    (47) expression -> STRING .

    SEMICOLON       reduce using rule 47 (expression -> STRING .)
    PLUS            reduce using rule 47 (expression -> STRING .)
    MINUS           reduce using rule 47 (expression -> STRING .)
    EQUALS          reduce using rule 47 (expression -> STRING .)
    NOTEQUALS       reduce using rule 47 (expression -> STRING .)
    LESS            reduce using rule 47 (expression -> STRING .)
    LESSEQUAL       reduce using rule 47 (expression -> STRING .)
    GREATER         reduce using rule 47 (expression -> STRING .)
    GREATEREQUAL    reduce using rule 47 (expression -> STRING .)
    AND             reduce using rule 47 (expression -> STRING .)
    OR              reduce using rule 47 (expression -> STRING .)
    RPAREN          reduce using rule 47 (expression -> STRING .)


state 48

    (19) if_statement -> IF LPAREN condition . RPAREN THEN LBRACE statements RBRACE ELSE LBRACE statements RBRACE FI
    (20) if_statement -> IF LPAREN condition . RPAREN THEN LBRACE statements RBRACE FI

    RPAREN          shift and go to state 61


state 49

    (36) condition -> expression . EQUALS expression
    (37) condition -> expression . NOTEQUALS expression
    (38) condition -> expression . LESS expression
    (39) condition -> expression . LESSEQUAL expression
    (40) condition -> expression . GREATER expression
    (41) condition -> expression . GREATEREQUAL expression
    (42) condition -> expression . AND expression
    (43) condition -> expression . OR expression
    (25) expression -> expression . PLUS term
    (26) expression -> expression . MINUS term
    (45) expression -> expression . PLUS empty
    (46) expression -> expression . MINUS empty

    EQUALS          shift and go to state 62
    NOTEQUALS       shift and go to state 63
    LESS            shift and go to state 64
    LESSEQUAL       shift and go to state 65
    GREATER         shift and go to state 66
    GREATEREQUAL    shift and go to state 67
    AND             shift and go to state 68
    OR              shift and go to state 69
    PLUS            shift and go to state 51
    MINUS           shift and go to state 52


state 50

    (21) write_statement -> WRITE expression SEMICOLON .

    RBRACE          reduce using rule 21 (write_statement -> WRITE expression SEMICOLON .)
    IDENTIFIER      reduce using rule 21 (write_statement -> WRITE expression SEMICOLON .)
    IF              reduce using rule 21 (write_statement -> WRITE expression SEMICOLON .)
    WRITE           reduce using rule 21 (write_statement -> WRITE expression SEMICOLON .)
    DO              reduce using rule 21 (write_statement -> WRITE expression SEMICOLON .)
    WHILE           reduce using rule 21 (write_statement -> WRITE expression SEMICOLON .)


state 51
